# fts3

./: .cproject  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  .project  CMakeLists.txt  Dockerfile_qa  Doxyfile_private  Doxyfile_public  LICENSE  README  README.md  Vagrantfile  bootstrap.sh  compile.sh  compile_debug.sh  compile_release.sh  coverage-build.sh  coverage-integration.sh  coverage-overall.sh  coverage-unit.sh  coverage.sh  install_packages.sh  qa.sh  sonar-project.properties
fts2-prototype/: DESCRIPTION  Makefile.am  Makefile.am.common  RELEASE-NOTES  VERSION  bootstrap  configure.ac
nagios/: CMakeLists.txt  README  check_fts  check_fts_running  check_fts_service  check_fts_stalled_transfers  nagios-plugins-fts.spec
nagios/config/: CMakeLists.txt  fts3-hosts.cfg  fts3-template.cfg
nagios/fts3-host/: fts_url_copy.cfg
nagios/nagios-config/: fts3-hosts.cfg  fts3-template.cfg
nagios/nagios-host/: fts3.cfg
nagios/plugins/: CMakeLists.txt  check_fts_running  check_fts_service  check_fts_stalled_server  check_fts_stalled_transfers  check_fts_submission
src/: CMakeLists.txt  manage.py  urls.py
src/CLI/: CliBase.cpp  CliBase.h  SubmitTransferCli.h  evn.h  fts3-transfer-submit.h  ftsFileTransferSoapBindingProxy.cpp  ftsFileTransferSoapBindingProxy.h  ftsH.h
src/activemq/: BrokerConfig.cpp  BrokerConfig.h  BrokerConnection.cpp  BrokerConnection.h  BrokerPublisher.cpp  BrokerPublisher.h  CMakeLists.txt  MessageLoader.cpp  MessageLoader.h  MonitoringMessage.h  main.cpp  msg-bulk-send.cpp  msg-ifce.cpp  msg-ifce.h
src/api-examples/: common.py  db-test-coverage.py  slowpairs.py  sls_fts3wmon_dashboard.py
src/apps/: __init__.py
src/bdii-cache-update/: CMakeLists.txt  bdii_cache.xml  fts-bdii-cache-updater  fts-bdii-cache-updater.initd  fts-bdii-cache-updater.service  updater.cpp
src/bringonline-daemon/: BringOnlineServer.cpp  BringOnlineServer.h  BringOnlineTask.cpp  BringOnlineTask.h  CMakeLists.txt  CancelStagingTask.cpp  CancelStagingTask.h  DeletionContext.cpp  DeletionContext.h  DeletionStateUpdater.h  DeletionTask.cpp  DeletionTask.h  FetchCancelStaging.cpp  FetchCancelStaging.h  FetchDeletion.cpp  FetchDeletion.h  FetchStaging.cpp  FetchStaging.h  Gfal2Task.cpp  Gfal2Task.h  PollTask.cpp  PollTask.h  StagingContext.cpp  StagingContext.h  StagingStateUpdater.h  StagingTask.cpp  StagingTask.h  ThreadContext.cpp  ThreadContext.h  WaitingRoom.cpp  WaitingRoom.h  _main.cpp  fts-bringonline.initd  fts-dm.initd  main.cpp
src/cli/: BulkSubmissionParser.cpp  BulkSubmissionParser.h  CMakeLists.txt  CertKey.h  CliBase.cpp  CliBase.h  CliBaseTest.cpp  CliManager.cpp  CliManager.h  DnCli.cpp  DnCli.h  File.h  GSoapContextAdapter.cpp  GSoapContextAdapter.h  GSoapStubs.h  GsoapStubs.h  JobIDCli.cpp  JobIDCli.h  JobParameterHandler.cpp  JobParameterHandler.h  JobStatus.h  JsonOutput.cpp  JsonOutput.h  ListTransferCli.cpp  ListTransferCli.h  ListVOManagersCli.cpp  ListVOManagersCli.h  MsgPrinter.cpp  MsgPrinter.h  ProxyCertificateDelegator.cpp  ProxyCertificateDelegator.h  ProxyCertificateHandler.cpp  ProxyCertificateHandler.h  README.txt  RestContextAdapter.cpp  RestContextAdapter.h  ServiceAdapter.cpp  ServiceAdapter.h  ServiceAdapterFallbackFacade.cpp  ServiceAdapterFallbackFacade.h  (+25 more)
src/common/: BaseService.h  BdiiBrowser.cpp  BdiiBrowser.h  CMakeLists.txt  CfgBlocks.cpp  CfgBlocks.h  CfgParser.cpp  CfgParser.h  ConcurrentQueue.cpp  ConcurrentQueue.h  Concurrent_Queue.cpp  DaemonTools.cpp  DaemonTools.h  Exceptions.cpp  Exceptions.h  Executor.cpp  Executor.h  ExecutorPool.cpp  ExecutorPool.h  InstanceHolder.h  JobParameterHandler.cpp  JobParameterHandler.h  JobStatusHandler.cpp  JobStatusHandler.h  LogFileStreamer.cpp  LogFileStreamer.h  Logger.cpp  Logger.h  MonitorObject.cpp  MonitorObject.h  OptimizerSample.cpp  OptimizerSample.h  OsgResourceNameFinder.cpp  OsgResourceNameFinder.h  PidTools.cpp  PidTools.h  README.txt  ReadConfigFile.cpp  ReadConfigFile.h  Singleton.h  (+68 more)
src/config/: CMakeLists.txt  FileMonitor.cpp  FileMonitor.h  README.txt  ServerConfig.cpp  ServerConfig.h  ServerConfigReader.cpp  ServerConfigReader.h  config_dev.h  fts-activemq.conf  fts-msg-monitoring.conf  fts3config  fts3syslog.conf  serverconfig.cpp  serverconfig.h  serverconfigreader.cpp  serverconfigreader.h
src/cred/: CMakeLists.txt  CredService.cpp  CredService.h  CredServiceFactory.cpp  CredServiceFactory.h  CredUtility.cpp  CredUtility.h  DelegCred.cpp  DelegCred.h  DelegCredException.h  DelegCredFactory.cpp  DelegCredFactory.h  Handle.h  TempFile.cpp  TempFile.h  cred-utility.cpp  cred-utility.h  utility.cpp  utility.h
src/db/: CMakeLists.txt  README.txt  execute.sh
src/dbClear/: CMakeLists.txt  clean.cpp
src/delegation-api-c/: CMakeLists.txt  Makefile.am  www.gridsite.org-delegation-2.0.0.wsdl
src/delegation-cli/: CMakeLists.txt  Makefile.am  cfg.cpp  delegation-simple.h  delegation.nsmap  delegation_simple_api.cpp  uri.cpp  util.cpp  util.h
src/fts3web/: LICENSE  fts3web.wsgi  manage.py  urls.py
src/fts3webconfig/: README
src/ftsmon-php/: README  fts3config.ini  fts3config.php  fts3files.php  fts3jobs.php  fts3queue.php  fts3stats.php  style.css
src/glue2-publisher/: CMakeLists.txt  fts-info-publisher  fts-info-publisher.initd  fts-info-publisher.service  publisher.cpp
src/infosys/: BdiiBrowser.cpp  BdiiBrowser.h  BdiiCacheParser.cpp  BdiiCacheParser.h  CMakeLists.txt  OsgParser.cpp  OsgParser.h  SiteNameCacheRetriever.cpp  SiteNameCacheRetriever.h  SiteNameRetriever.cpp  SiteNameRetriever.h
src/libs/: authn.py  diagnosis.py  jsonify.py  slsfy.py  util.py
src/monitoring/: BrokerConfig.cpp  BrokerConfig.h  CMakeLists.txt  Logger.cpp  Logger.h  MsgFile.cpp  MsgFile.h  MsgPipe.cpp  MsgPipe.h  MsgProducer.cpp  MsgProducer.h  MsgRecoverPipe.cpp  MsgRecoverPipe.h  UtilityRoutines.cpp  UtilityRoutines.h  bdii_routines.cpp  bdii_routines.h  compress.cpp  compress.h  concurrent_queue.cpp  concurrent_queue.h  db_routines.cpp  (+8 more)
test/: CMakeLists.txt  FTS3-config  Macros  Makefile  README.txt  fts-tests.spec  fts3-tests.spec  run-in-mock.sh
(+1974 files in other folders)
